kubernetes/apps/networking/external-services/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pihole-ui
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.home.arpa/type: "internal"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /(.*) /admin/$1 break;
spec:
  rules:
    - host: pihole-ui.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
